syntax = "proto3";
package grpcproto;
option go_package = ".;protoBuffer";

message Coords {
    double lat = 1;
    double long = 2;
}

message HaversineRequest {
    Coords firstCoords = 1;
    Coords secondCoords = 2;
}

message HaversineResponse {
    double distance = 1;
}

service HaversineService {
    rpc Haversine(HaversineRequest) returns (HaversineResponse){}
}
